name:                fxpak
version:             0.0.0.1
synopsis:            Interface to the FXPak/FXPak Pro USB interface
description:         Wraps Serial interaction to the FXPak/FXPak Pro
homepage:            https://github.com/wuest/fxpak
bug-reports:         https://github.com/wuest/fxpak/issues
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           2021 Tina Wuest
category:            Hardware
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -O2 -static
  default-language: Haskell2010
  hs-source-dirs:   src

  exposed-modules:    FXPak
  other-modules:      FXPak.Internal

  build-depends:      base       >= 4.9  && < 4.15
                    , directory  >= 1.3  && < 1.4
                    , filepath   >= 1.4  && < 1.5
                    , containers >= 0.6  && < 0.7
                    , text       >= 0.11 && < 1.3
                    , serialport >= 0.5  && < 0.6
                    , bytestring >= 0.11 && < 0.12
                    , time       >= 1.11 && < 1.12
